test-cases/negative/test_040_missing_operator.lay
# negative test: missing operator between values
# expected: error should be thrown

the variable x of type Number is 8


